# nanomanifold

./: README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
scratch/: compare_so3_projection.py
src/nanomanifold/: __init__.py  common.py
src/nanomanifold/SE3/: __init__.py  _jacobians.py  adjoint.py  canonicalize.py  exp.py  hat.py  inverse.py  left_jacobian.py  left_jacobian_inverse.py  log.py  (+6 more)
tests/: conftest.py  test_common.py  test_jax_jit.py  test_se3_canonicalize.py  test_se3_convention.py  test_se3_conversions_matrix.py  test_se3_conversions_rt.py  test_se3_hat_vee.py  test_se3_inverse.py  test_se3_jacobians.py  test_se3_log_exp.py  test_se3_mean.py  test_se3_multiply.py  test_se3_random.py  test_se3_singularities.py  test_se3_slerp.py  test_se3_transform_points.py  test_so3_conversions_axis_angle.py  test_so3_conversions_euler.py  test_so3_conversions_matrix.py  test_so3_conversions_quaternion.py  test_so3_conversions_sixd.py  test_so3_convert.py  test_so3_distance.py  test_so3_hat_vee.py  test_so3_hinge.py  test_so3_identity.py  test_so3_inverse.py  test_so3_jacobians.py  test_so3_log_exp.py  test_so3_mean.py  test_so3_multiply.py  test_so3_pairwise_conversions.py  test_so3_random.py  test_so3_rotate_points.py  test_so3_singularities.py  test_so3_slerp.py  test_torch_compile.py  test_version.py
tests/specifics/: test_distance_gradient_edge_cases.py  test_invalid_quaternion_inputs.py  test_matrix_gradient_edge_cases.py  test_slerp_gradient_edge_cases.py  test_torch_device_placement_conversions.py  test_weighted_mean_autograd_regressions.py
(+43 files in other folders)
