[project]
name = "nanomanifold"
version = "0.2.2"
description = "SO3/SE3 operations on any backend"
readme = "README.md"
authors = [
    { name = "Andrea Boscolo Camiletto", email = "abcamiletto@gmail.com" },
]
requires-python = ">=3.11"
dependencies = ["array-api-compat>=1.12.0,<2", "jaxtyping>=0.3.2,<1", "numpy>=2.2.0,<3"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "jax>=0.7.1",
    "pytest>=8.4.1",
    "ruff>=0.9.0",
    "scipy>=1.15,<1.16",
    "torch>=2.8.0",
]

[tool.ruff]
line-length = 140
lint.ignore = ["E741", "E743", "F722"] # ignore ambiguous variable names
lint.extend-select = ["I"]

[tool.ty.src]
exclude = ["tests/"]
