[project]
name = "nanomanifold"
version = "0.7.1"
description = "SO3/SE3 operations on any backend"
readme = "README.md"
authors = [
    { name = "Andrea Boscolo Camiletto", email = "abcamiletto@gmail.com" },
]
requires-python = ">=3.10"
dependencies = ["jaxtyping>=0.3.2,<1", "numpy>=1.26.4,<3"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "setuptools>=80.9.0",
]
test = [
    "jax>=0.4.38",
    "pytest>=8.4.1",
    "scipy>=1.13.1",
    "torch>=1.13.1",
]

[tool.ruff]
line-length = 140
lint.ignore = ["E741", "E743", "F722"] # ignore ambiguous variable names
lint.extend-select = ["I"]

[tool.ty.src]
exclude = ["tests/"]
